@@ -620,7 +620,7 @@ struct ViterbiMapper : public ViterbiMapReduce, public Aligner
     alignment_type alignment_source_target;
     alignment_type alignment_target_source;
 
-    const int iter_mask = (1 << 10) - 1;
+    const int iter_mask = (1 << 12) - 1;
     
     for (int iter = 0;; ++ iter) {
       mapper.pop_swap(bitext);
@@ -634,6 +634,9 @@ struct ViterbiMapper : public ViterbiMapReduce, public Aligner
       
       reducer_source_target.push(bitext_type(bitext.id, bitext.source, bitext.target, alignment_source_target));
       reducer_target_source.push(bitext_type(bitext.id, bitext.target, bitext.source, alignment_target_source));
+
+      if ((iter & iter_mask) == iter_mask)
+	Aligner::shrink();
     }
   }
 };
